--- a/action.yml
+++ b/action.yml
@@ -8,6 +8,8 @@ inputs:
   ruby-version:
     description: 'Engine and version to use, see the syntax in the README. Reads from .ruby-version or .tool-versions if unset.'
     default: 'default'
+  ruby-version-file:
+    description: 'Path to the Gemfile.lock file.'
   rubygems:
     description: |
       The version of RubyGems to use. Either 'default' (the default), 'latest', or a version number (e.g., 3.3.5).
